rubocop/examples/good/Style_ClassAndModuleCamelCase.rb
# 'https://github.com/bbatsov/ruby-style-guide#camelcase-classes'

# Use CamelCase for classes and modules.

# good
class SomeClass
  ...
end

class SomeXML
  ...
end

class XMLSomething
  ...
end
