rubocop/examples/bad/Style_BeginBlock.rb
# 'https://github.com/bbatsov/ruby-style-guide#no-BEGIN-blocks'

#TODO: Avoid the use of BEGIN blocks.
